consultant unassign command #181
