# src/aggregates/ConsultantJob/types/CommandDataTypes/UnassignConsultantCommandDataInterface.ts
@@ -1,0 +1,6 @@
+export interface UnassignConsultantCommandDataInterface {
+  _id: string;
+  consultant_id: string;
+  consultant_role_id?: string;
+  client_ids?: string[];
+}
